fixed filter on mobile

--- a/src/css/filter.module.css
+++ b/src/css/filter.module.css
@@ -54,5 +54,25 @@
  .dropbtn{
   width: 15rem;
   }
+
+  
+  .dropdownContent {
+    display: none;
+    position: start;
+    background-color: white;
+    width: 240px;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    z-index: 1;
+  }
+  
+  .p {
+    padding-right: 170px;
+  }
+  .minmax {
+    padding-left: 30px;
+  }
+  .priceFilter  {
+    padding-top: 40px;
+  }
   
 }
